--- a/Desafio 7 - resolução/Front-end/index.html
+++ b/Desafio 7 - resolução/Front-end/index.html
@@ -20,7 +20,7 @@
 	<main>
 		<div id="info-user-container">
 			<form>
-				<button type="submit">Trocar nome</button>
+				<button type="submit"><h1>Novo usuário</h1></button>
 			</form>
 			<div>
 			</div>
@@ -31,9 +31,6 @@
 			<button type="submit">send</button>
 		</form>
 	</main>
-	<script src="./adjectives.js"></script>
-	<script src="./animals.js"></script>
-	<script src="./colors.js"></script>
 	<script src="./index.js"></script>
 	<script src="./info-config.js"></script>
 </body>
